2nd version has no hard code for java package name to find registry classes #40